--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,9 @@ orbs:
   aws-ecr: circleci/aws-ecr@6.9.1
 version: 2.1
 workflows:
-  nginx_html_docker_ecr:
+  build_and_push_image:
     jobs:
-      - nginx_html_docker_ecr:
+      - build_and_push_image:
           account-url: AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
           aws-access-key-id: ACCESS_KEY_ID_ENV_VAR_NAME
           aws-secret-access-key: SECRET_ACCESS_KEY_ENV_VAR_NAME
