--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,9 @@ orbs:
   aws-ecr: circleci/aws-ecr@6.9.1
 version: 2.1
 workflows:
-  build_and_push_image:
+  nginx_html:
     jobs:
-      -build_and_push_image:
+      - aws-ecr/nginx_html:
           account-url: AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
           aws-access-key-id: ACCESS_KEY_ID_ENV_VAR_NAME
           aws-secret-access-key: SECRET_ACCESS_KEY_ENV_VAR_NAME
